force-app/main/default/objects/Fixture__c/Fixture__c.object-meta.xml
<CustomObject>
    <description>Represents a match/game/fixture. Replaces Opportunity for sports data.</description>
    <label>Fixture</label>
    <nameField>
        <displayFormat>FIX-{00000}</displayFormat>
        <label>Fixture Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixtures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>