force-app/main/default/objects/Fixture__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Fixtures</relationshipLabel>
    <relationshipName>Fixtures</relationshipName>
    <type>MasterDetail</type>
</CustomField>