force-app/main/default/objects/Fixture__c/fields/Current_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current active period of the fixture (half, quarter, innings, set, etc.)</description>
    <inlineHelpText>Links to the currently active period in this match</inlineHelpText>
    <label>Current Period</label>
    <referenceTo>Fixture_Period__c</referenceTo>
    <relationshipLabel>Active In Fixtures</relationshipLabel>
    <relationshipName>Active_Fixtures</relationshipName>
    <type>Lookup</type>
</CustomField>