force-app/main/default/objects/Fixture__c/fields/Fixture_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Fixture_Date_Time__c</fullName>
    <label>Fixture Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>