force-app/main/default/objects/Fixture__c/fields/Fixture_Stats_JSON__c.field-meta.xml
<CustomField>
    <fullName>Fixture_Stats_JSON__c</fullName>
    <label>Fixture Stats JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>