force-app/main/default/objects/Fixture__c/fields/Home_Score_Final__c.field-meta.xml
<CustomField>
    <fullName>Home_Score_Final__c</fullName>
    <label>Home Score Final</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>