force-app/main/default/objects/Fixture__c/fields/Referee__c.field-meta.xml
<CustomField>
    <fullName>Referee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main referee/umpire for this fixture</description>
    <inlineHelpText>The primary referee or umpire officiating this match</inlineHelpText>
    <label>Referee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fixtures Officiated</relationshipLabel>
    <relationshipName>Fixtures_Officiated</relationshipName>
    <type>Lookup</type>
</CustomField>