force-app/main/default/objects/Fixture__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <description>Formula field determining the winning team based on final scores</description>
    <formula>IF(
    ISPICKVAL(Status__c, "Completed"),
    IF(
        Home_Score_Final__c &gt; Away_Score_Final__c,
        Home_Team__r.Name,
        IF(
            Away_Score_Final__c &gt; Home_Score_Final__c,
            Away_Team__r.Name,
            "Draw"
        )
    ),
    ""
)</formula>
    <inlineHelpText>Shows winning team name, Draw, or blank if match not complete</inlineHelpText>
    <label>Winner</label>
    <type>Text</type>
</CustomField>