force-app/main/default/objects/Fixture__c/recordTypes/AFL_Match.recordType-meta.xml
<RecordType>
    <fullName>AFL_Match</fullName>
    <active>true</active>
    <label>AFL Match</label>
</RecordType>