force-app/main/default/objects/Fixture__c/recordTypes/Basketball_Game.recordType-meta.xml
<RecordType>
    <fullName>Basketball_Game</fullName>
    <active>true</active>
    <label>Basketball Game</label>
</RecordType>