force-app/main/default/objects/Fixture__c/recordTypes/Cricket_Match.recordType-meta.xml
<RecordType>
    <fullName>Cricket_Match</fullName>
    <active>true</active>
    <label>Cricket Match</label>
</RecordType>