force-app/main/default/objects/Fixture__c/recordTypes/Olympic_Event.recordType-meta.xml
<RecordType>
    <fullName>Olympic_Event</fullName>
    <active>true</active>
    <label>Olympic Event</label>
</RecordType>