force-app/main/default/objects/Fixture__c/recordTypes/Padel_Match.recordType-meta.xml
<RecordType>
    <fullName>Padel_Match</fullName>
    <active>true</active>
    <label>Padel Match</label>
</RecordType>