force-app/main/default/objects/Fixture__c/recordTypes/Rugby_Match.recordType-meta.xml
<RecordType>
    <fullName>Rugby_Match</fullName>
    <active>true</active>
    <label>Rugby Match</label>
</RecordType>