force-app/main/default/objects/Fixture__c/recordTypes/Soccer_Match.recordType-meta.xml
<RecordType>
    <fullName>Soccer_Match</fullName>
    <active>true</active>
    <label>Soccer Match</label>
</RecordType>