force-app/main/default/objects/Fixture__c/recordTypes/Tennis_Match.recordType-meta.xml
<RecordType>
    <fullName>Tennis_Match</fullName>
    <active>true</active>
    <label>Tennis Match</label>
</RecordType>